# cpuminer-multi

./: .gitignore  Makefile.am  README.md  build.sh  cpu-miner.c  cpuminer-miner.h  cpuminer-miner.h.bak  create.sh  mennica  util.c
.github/workflows/: main.yml
input/: 1.p  10.p  11.p  12.p  13.p  14.p  2.p  3.p  4.p  5.p  6.p  7.p  8.p  9.p  js
